yellow border remove

--- a/trainstspnr.html
+++ b/trainstspnr.html
@@ -29,7 +29,7 @@
     #navbar #navdiv0 {
       width: 15%;
       height: 90%;
-      border: 2px solid yellow;
+      /* border: 2px solid yellow; */
       display: flex;
       flex-direction: column;
       justify-content: space-between;
